# sits

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: project.yaml
docs/: CLUSTERING_README.md
notebooks/: 01_anotacao.ipynb  02_importar_dados_externos.ipynb  03_merge_dados.ipynb  04_treinamento.ipynb  05_classificacao.ipynb  06_clustering.ipynb
scripts/: generate_demo_data.py
src/sits/: __init__.py
src/sits/annotation/: README.md  __init__.py  __main__.py  app.py  manager.py  samplers.py  store.py
src/sits/annotation/core/: __init__.py
src/sits/annotation/core/models/: __init__.py  config.py  enums.py  sample.py
src/sits/annotation/core/services/: __init__.py  annotation_store.py  config_loader.py  helper_model_service.py  mask_reader.py  session_manager.py  similarity_service.py  spectral.py  stack_reader.py
src/sits/annotation/ui/: __init__.py  main_window.py
src/sits/annotation/ui/controllers/: __init__.py  annotation_controller.py  navigation_controller.py  visualization_controller.py
src/sits/classification/: README.md  __init__.py  dataset.py  experiment.py  metrics.py  models.py  predict.py  trainer.py
src/sits/clustering/: README.md  __init__.py  analysis.py  data_extraction.py  metrics.py  models.py  pipeline.py  predict.py  trainer.py  visualization.py
src/sits/config/: README.md  __init__.py  schemas.py  settings.py
src/sits/io/: README.md  __init__.py  dataset.py  raster.py  session.py
src/sits/processing/: README.md  __init__.py  normalization.py  sampling.py  spectral.py
tests/: __init__.py
(+29 files in other folders)
